# fujinet-firmware

./: .clang-format  .dir-locals.el  .gitattributes  .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  CREDITS.md  Makefile  README.md  README_wifi.md  atariwifi.ino  bisect-helper.py  build-sh.md  build.sh  build_firmwarezip.py  build_packages.py  build_version.py  build_version_pc.py  build_webui.py  coding-standard.py  create-platformio-ini.py  debug_version.py  fujinet.py  fujinet_firmware_uploader.md  fujinet_firmware_uploader.py  fujinet_partitions_16MB.csv  fujinet_partitions_4MB.csv  fujinet_partitions_4MB_noupdate.csv  fujinet_partitions_8MB.csv  fujinet_pc.cmake  install_python_modules.sh  mon20201011isr.txt  pack_firmware.py  pc_merge_notes.md  platformio-sample - Copy.ini  platformio-sample.ini  platformio.common.ini  platformio.ini.bu  platformio.zip-options.ini  (+30 more)
components/FastLED-idf/: CMakeLists.txt  ESP-IDF.md  FastLED.h  Kconfig  README.md  colorutils.h  component.mk  fastled_delay.h  led_sysdefs.h  lib8tion.h  noise.cpp
components/FastLED-idf/hal/: README.md  esp32-hal-gpio.c  esp32-hal-misc.c  esp32-hal.h
components/WS2812FX-idf/: CMakeLists.txt  FX.cpp  FX.h  FX_fcn.cpp  README.md  component.mk  palettes.h
components/afpfs-ng/: CMakeLists.txt  README.md  afp.h  afp_protocol.h  codepage.h  config.h  dsi.h  libafpclient.h  map_def.h  midlevel.h  uams_def.h
components/afpfs-ng/esp32/: cast5.c  cast5.h  esp32_compat.c  esp32_compat.h  gcrypt.c  gcrypt.h
components/afpfs-ng/include/: afp.h  afp_protocol.h  codepage.h  dsi.h  libafpclient.h  map_def.h  midlevel.h  uams_def.h  utils.h
components/afpfs-ng/lib/: afp.c  afp_internal.h  afp_replies.h  afp_url.c  client.c  codepage.c  connect.c  debug.c  did.c  did.h  dsi.c  dsi_protocol.h  forklist.c  forklist.h  log.c  loop.c  lowlevel.c  lowlevel.h  map_def.c  midlevel.c  proto_attr.c  proto_desktop.c  proto_directory.c  proto_files.c  proto_fork.c  proto_login.c  proto_map.c  proto_replyblock.c  proto_server.c  proto_session.c  proto_volume.c  resource.c  resource.h  server.c  server.h  status.c  uams.c  uams.h  uams_def.c  unicode.c  (+4 more)
components/bzip2/: CMakeLists.txt  COPYING
components/bzip2/lib/: compress.c
components/libarchive/: CMakeLists.txt  config.h
components/libarchive/esp32/: esp32_compat.c
components/libarchive/lib/: archive.h  archive_acl.c  archive_acl_private.h  archive_check_magic.c  archive_cmdline.c  archive_cryptor.c  archive_cryptor_private.h  archive_digest.c  archive_digest_private.h  archive_disk_acl_darwin.c  archive_disk_acl_freebsd.c  archive_entry.c  archive_entry.h  archive_entry_copy_bhfi.c  archive_entry_link_resolver.c  archive_entry_locale.h  archive_entry_private.h  archive_entry_stat.c  archive_hmac.c  archive_hmac_private.h  archive_match.c  archive_options.c  archive_options_private.h  archive_pack_dev.h  archive_platform.h  archive_platform_acl.h  archive_platform_stat.h  archive_platform_xattr.h  archive_private.h  archive_random.c  archive_random_private.h  archive_rb.h  archive_read.c  archive_read_disk_entry_from_file.c  archive_read_disk_posix.c  archive_read_disk_private.h  archive_read_disk_windows.c  archive_read_open_fd.c  archive_read_open_file.c  archive_read_open_filename.c  (+55 more)
components/liblzma/: CMakeLists.txt  config.h
components/liblzma/common/: tuklib_mbstr_width.c
components/libnfs/: CMakeLists.txt
components/libnfs/esp32/: config.h  esp32_compat.c  esp32_compat.h
components/libnfs/include/: libnfs-private.h
components/libnfs/lib/: libnfs-sync.c  multithreading.c  nfs_v4.c  socket.c
components/libssh/: CMakeLists.txt  config.h  stubs.h
components/libssh/src/: agent.c  auth.c  base64.c  bignum.c  bind.c  bind_config.c  buffer.c  callbacks.c  chachapoly.c  channels.c  client.c  config.c  config_parser.c  connect.c  connector.c  crypto_common.c  curve25519.c  dh-gex.c  dh.c  dh_crypto.c  dh_key.c  ecdh.c  ecdh_crypto.c  ecdh_gcrypt.c  ecdh_mbedcrypto.c  error.c  esp_stubs.c  gcrypt_missing.c  getpass.c  getrandom_crypto.c  getrandom_gcrypt.c  getrandom_mbedcrypto.c  gssapi.c  gzip.c  init.c  kdf.c  kex.c  known_hosts.c  knownhosts.c  legacy.c  (+40 more)
components/lzma/: CMakeLists.txt
components/lzma/lib/: 7zDec.c
components/mongoose/: CMakeLists.txt
components/sqlite3/: CMakeLists.txt
components/sqlite3/include/: sqlite3_esp32.h
components/sqlite3/private_include/: assert.h  config_ext.h  osapi.h
components/sqlite3/src/: esp32_vfs.c
components/zstd/: CMakeLists.txt
components/zstd/lib/: zstd.h
components_pc/libssh/doc/: CMakeLists.txt  README.gitlab.freebsd.md  authentication.dox  command.dox  curve25519-sha256@libssh.org.txt  doc_coverage.sh  forwarding.dox  guided_tour.dox  introduction.dox  mainpage.dox  pkcs11.dox  sftp.dox  sftp_aio.dox  shell.dox
components_pc/libssh/examples/: CMakeLists.txt  authentication.c  connect_ssh.c  exec.c  keygen.c  keygen2.c  knownhosts.c  libssh_scp.c  proxy.c  sample_sftpserver.c  samplesftp.c  scp_download.c  (+8 more)
pico/coco/: CMakeLists.txt  cococart.pio  main.c  rom.c  uart_rx.pio  uart_tx.pio
pico/mac/: .gitignore  CMakeLists.txt  combined_mux.pio  commands.c  commands.pio  dcd_commands.pio  dcd_latch.pio  dcd_mux.pio  dcd_mux.pio.old  dcd_read.pio  dcd_write.pio  echo.pio  enand.pio  latch.pio  mux.pio
src/: CMakeLists.txt  idf_component.yml  main.cpp
src/xep/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  FujiBusPacketTests.cpp  analyze_write.txt
tests/cache/: cache.ino
tests/cio/: cio.ino
tests/cio2/: README.md  cio2.ino
tests/cio3/: cio3.ino
tests/cio4-poll/: README.md  cio4-poll.ino
tests/config/: config.ino
tests/config-old/: README.md
tests/debugscan/: debugscan.ino
tests/diskulator/: diskulator.ino
tests/multilator/: multilator.ino
tests/netinfo/: README.md  netinfo.ino
tests/platoterm/: FIFO.h  platoterm.ino
tests/scanwifi/: scanwifi.ino
tests/test3/: README.md  test3.ino
tests/tictactoe/: tictactoe.ino
tests/tnfs/: tnfs.ino
tests/tnfsBoot/: README.md  tnfsBoot.ino
tests/tnfsDirList/: tnfsDirList.ino
tests/tnfsWrite/: tnfsWrite.ino
(+3532 files in other folders)
